--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20130412_148%2Fpjs700913_1365765196814txM9O_JPEG%2Fmovie_imageCAUS4JGN.jpg&type=sc960_832"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다. </h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
+                        <h5 class="card-title">7번 방의 선물. </h5>
+                        <p class="card-text">눈물 펑펑 띵작.</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <p class="mycomment">이걸 보고 안 울 수가 있나?</p>
                     </div>
                 </div>
             </div>
