--- a/index.html
+++ b/index.html
@@ -129,46 +129,46 @@
                     <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20130412_148%2Fpjs700913_1365765196814txM9O_JPEG%2Fmovie_imageCAUS4JGN.jpg&type=sc960_832"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">7번 방의 선물. </h5>
-                        <p class="card-text">눈물 펑펑 띵작.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">이걸 보고 안 울 수가 있나?</p>
+                        <h5 class="card-title">7번 방의 선물</h5>
+                        <p class="card-text">눈물 펑펑 띵작</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">울고 싶을 때 보는 영화</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F5575%2F2021%2F04%2F27%2F0000194705_001_20210427093004110.jpg&type=a340"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다. </h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">레옹</h5>
+                        <p class="card-text">마틸다</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">저는 3번 봤어요</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200508_285%2F1588946823630KCOFx_JPEG%2FFRO-003.jpg&type=sc960_832"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다. </h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">타이타닉</h5>
+                        <p class="card-text">몇 번을 봤는지 모르겠음</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">인생영화 Best of Best</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEwMThfMTEg%2FMDAxNjY2MTAyNTYyNjIz.bdyYOaDDp6xZRH3lP0FtJ8YrPhSv88aa2p2bixza0Bwg.LRqvvJHWtR3lD1pt8dmwre8zX6ZpEpFXstUtr0F8jAAg.JPEG.suha0703%2F1666102322707.jpg&type=a340"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다. </h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">김씨표류기</h5>
+                        <p class="card-text">포스터는 재미 없을 것 같죠</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">하지만 재밌어요</p>
                     </div>
                 </div>
             </div>
