--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200508_285%2F1588946823630KCOFx_JPEG%2FFRO-003.jpg&type=sc960_832"
+                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F5366%2F2018%2F05%2F27%2F2018052710014600115581e5800d612114224590_20180527100437774.jpg&type=a340"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">타이타닉</h5>
